--- a/Index.html
+++ b/Index.html
@@ -38,16 +38,31 @@
             text-decoration: none;
         }
         .hero {
-            background-image: url('hero-image.jpg');
-            background-size: cover;
-            background-position: center;
-            color: #333;
+            position: relative;
+            overflow: hidden;
+            height: 100vh;
+            color: black;
             text-align: center;
-            padding: 5rem 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .hero iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
         }
         .hero h2 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
+            z-index: 1;
+        }
+        .hero p {
+            z-index: 1;
         }
         .section {
             padding: 2rem;
@@ -95,20 +110,23 @@
     </header>
 
     <section class="hero">
+        <iframe src="https://www.youtube.com/embed/R8dh-YyPm2o?autoplay=1&mute=1&loop=1&playlist=R8dh-YyPm2o" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <h2>Welcome to the Art Exhibition</h2>
         <p>Explore the finest collections of modern and classical art.</p>
     </section>
+    <!-- Add more sections as needed -->
 
+    
     <section id="artists" class="section">
         <h2>Featured Artists</h2>
         <div class="artists">
             <div class="card">
-                <img src="Images\Artist1.png" alt="Artwork by Artist Name" style="width: 80%; height: auto;">
+                <img src="Images/Artist1.png" alt="Artwork by Artist Name" style="width: 80%; height: auto;">
                 <h3>Theo Calder</h3>
                 <p>Theo Calder is a minimalist sculptor known for his geometric designs and use of industrial materials. His work explores the relationship between space, form, and light, creating striking yet simple pieces that evoke a sense of quiet balance.</p>
             </div>
             <div class="card">
-                <img src="Images\Artist2.png" alt="Artwork by Artist Name"style="width: 80%; height: auto;">
+                <img src="Images/Artist2.png" alt="Artwork by Artist Name" style="width: 80%; height: auto;">
                 <h3>Lyra Saphire</h3>
                 <p>Lyra Saphire is a contemporary artist blending digital and traditional mediums. Her ethereal works combine vivid colors and intricate lines, inspired by dreams and nature. Saphire creates surreal, immersive landscapes that explore the connection between reality and imagination, inviting viewers to reflect on the world’s interconnectedness.</p>
             </div>
@@ -120,14 +138,14 @@
         <h2>Galleries</h2>
         <div class="galleries">
             <div class="card">
-                <img src="Images\Piece1.png" alt="Gallery Collection" style="width: 80%; height: auto;">
+                <img src="Images/Piece1.png" alt="Gallery Collection" style="width: 80%; height: auto;">
                 <h3>Equilibrium</h3>
                 <p>"Equilibrium" is a minimalist exploration of balance and tension, created from steel and concrete. The sculpture juxtaposes solid and void, with sharp geometric forms intersecting open spaces. Its industrial materials reflect a raw, modern aesthetic, while the play of light and shadow brings dynamic life to its static form. Standing in quiet solitude, "Equilibrium" invites viewers to reflect on the delicate harmony between contrasting forces in space and structure.</p>
             </div>
             <div class="card">
-                <img src="Images\Piece2.png" alt="Gallery Collection " style="width: 80%; height: auto;">
+                <img src="Images/Piece2.png" alt="Gallery Collection" style="width: 80%; height: auto;">
                 <h3>Eclipse Bloom</h3>
-                <p>Eclipse Bloom is a mixed-media masterpiece by Lyra Saphire, featuring a swirling, dreamlike garden illuminated by an otherworldly light. The piece combines hand-painted organic patterns with shimmering digital projections, creating a dynamic interplay of shadow and glow. It symbolizes cycles of growth and renewal, capturing the beauty found in the fleeting moments between darkness and light..</p>
+                <p>Eclipse Bloom is a mixed-media masterpiece by Lyra Saphire, featuring a swirling, dreamlike garden illuminated by an otherworldly light. The piece combines hand-painted organic patterns with shimmering digital projections, creating a dynamic interplay of shadow and glow. It symbolizes cycles of growth and renewal, capturing the beauty found in the fleeting moments between darkness and light.</p>
             </div>
             <!-- Add more gallery cards as needed -->
         </div>
